<resources>
    <string name="app_name">KNJ</string>

    <string name="facebook_app_id" translatable="false">327640684632071</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb327640684632071</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Sierotka Marysia</string>
    <string name="nav_header_subtitle" translatable="false">wilk@czerwonykapturek.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- Menu tags -->
    <string name="menu_tag_home">Home</string>
    <string name="menu_tag_settings">Settings</string>
    <string name="menu_tag_user_info">Your account</string>
    <string name="menu_tag_history">History</string>
    <string name="menu_tag_calendar">Calendar</string>
    <string name="menu_tag_notif">Notifications</string>
    <string name="menu_title_actions">Actions</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_tag_create_lesson">Create lesson</string>
    <string name="menu_tag_logout">Logout</string>
    <string name="menu_tag_find_lesson">Find lesson</string>
    <string name="menu_tag_login">Log in</string>
    <string name="menu_tag_signin">Sign in</string>

    <!-- Labels -->
    <string name="label_login">Log in</string>
    <string name="label_signin">Sign in</string>
    <string name="label_or">or</string>
    <string name="label_settings">Settings</string>
    <string name="label_calendar">Calendar</string>
    <string name="label_history">History</string>
    <string name="label_account">Your Account</string>
    <string name="label_name">First Name</string>
    <string name="label_sname">Last Name</string>
    <string name="label_email">Email</string>
    <string name="label_phone_no">Phone number</string>
    <string name="label_about_me">About me</string>
    <string name="label_password">Password</string>
    <string name="label_edit_account">Edit your account</string>
    <string name="label_notifs">Notifications</string>
    <string name="label_level">Level</string>
    <string name="label_subject">Subject</string>
    <string name="label_rate">Rate</string>
    <string name="label_time">Time</string>
    <string name="label_hour" translatable="false">h</string>
    <string name="label_from">from</string>
    <string name="label_to">to</string>
    <string name="label_create_lesson">Create lesson</string>
    <string name="label_date_time_picker"> Date/Time Picker</string>
    <string name="label_filters">Filters</string>

    <!-- Hints -->
    <string name="hint_email">Your e-mail</string>
    <string name="hint_pass">Your password</string>
    <string name="hint_name">First Name</string>
    <string name="hint_sname">Last Name</string>
    <string name="hint_city">City</string>
    <string name="hint_street">Street</string>
    <string name="hint_flat">Flat</string>
    <string name="hint_hour">Hour</string>
    <string name="hint_min">Min</string>
    <string name="hint_day">Day</string>
    <string name="hint_month">Month</string>
    <string name="hint_enter_here">Enter here</string>

    <!-- Button labels -->
    <string name="button_login">Login</string>
    <string name="button_fb_login">Login with Facebook</string>
    <string name="button_forgot_pass">Forgot password?</string>
    <string name="button_signin">Sign in</string>
    <string name="button_change_account">Change account data</string>
    <string name="button_save">Save</string>
    <string name="button_ok" translatable="false">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_create">Create</string>
    <string name="button_lesson_signin">Sign in</string>
    <string name="button_send_message">Send message</string>
    <string name="button_date">Date</string>
    <string name="button_time">Time</string>
    <string name="button_select">Select</string>

    <!-- Info -->
    <string name="info_register_claim">Reg claim</string>
    <string name="info_successful_login">Successful login</string>
    <string name="info_failed_login">Login failed</string>
    <string name="info_successful_logout">Successful logout</string>
    <string name="info_failed_logout">Logout failed</string>
    <string name="info_success_signin">Successful sign in.</string>
    <string name="info_failed_signin">Sign in failed</string>
    <string name="info_select_address">Select lesson address</string>
    <string name="info_select_subject">Select lesson subject and levels</string>
    <string name="info_select_date">Select from-to date</string>
    <string name="info_server_error">Server error :(</string>
    <string name="info_lesson_signin_success">Successfully signed in for this lesson</string>
    <string name="info_lesson_already_signin">You are already signed in for this lesson</string>
    <string name="info_no_time">Enter time</string>
    <string name="info_wrong_time">Time must be between 30min - 180min</string>
    <string name="info_no_rate">Enter rate per hour</string>
    <string name="info_no_levels">Select at least on level</string>
    <string name="info_wrond_date">Date from must be earlier than date to</string>
    <string name="info_no_city">Enter city</string>
    <string name="info_no_street">Enter street</string>
    <string name="info_select_time_rate">Select lesson\'s time and rate</string>
    <string name="info_enter_description">Now it\'s time for description</string>
    <string name="info_wrong_address">Wrong address passed. Correct lesson address</string>
    <string name="info_aprove_success">You have accepted lesson</string>
    <string name="info_reject_success">You have rejected lesson</string>
    <string name="info_first_login">Log in at first</string>
    <string name="info_enter_email_pass">Enter email and password</string>
    <string name="info_no_messages">No messages</string>
    <string name="info_no_notifs">No notifs</string>
    <string name="info_no_history">No history</string>
    <string name="info_wrong_parameters">Wrong lesson parameters</string>
    <string name="info_time_used">You have other lesson at this time</string>
    <string name="info_its_your_lesson">It is your lesson</string>


</resources>
