<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_tag_home"
            android:icon="@drawable/ic_home_black"/>
        <item
            android:id="@+id/nav_your_accont"
            android:title="@string/menu_tag_user_info"
            android:icon="@drawable/ic_person_black"/>
        <item
            android:id="@+id/nav_notif"
            android:icon="@drawable/ic_notifications_black"
            android:title="@string/menu_tag_notif"/>
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_today_black"
            android:title="@string/menu_tag_calendar" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black"
            android:title="@string/menu_tag_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/menu_tag_settings" />

    </group>

    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_create"
                android:icon="@drawable/ic_add_circle_outline_black"
                android:title="@string/menu_tag_create_lesson" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_directions_run_black"
                android:title="@string/menu_tag_logout"/>
        </menu>
    </item>

</menu>
