<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/info_select_address"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/city_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_city"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/street_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minWidth="150dp"
        android:hint="@string/hint_street"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/flat_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:minWidth="150dp"
        android:hint="@string/hint_flat"
        android:textAlignment="center"/>


</LinearLayout>