<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/label_login"
            android:textSize="32sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_below="@id/fragment_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_below="@id/email_edit"
            android:layout_centerHorizontal="true"
            android:autofillHints="password"
            android:hint="@string/hint_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/password_edit"
            android:layout_centerHorizontal="true"
            android:text="@string/button_login"
            android:textAllCaps="false"
            android:onClick="onLoginClick"/>

        <Button
            android:id="@+id/forgot_pass_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/login_button"
            android:layout_alignParentEnd="true"
            android:text="@string/button_forgot_pass"
            android:background="@color/colorFullTransparent"
            android:textAllCaps="false" />


        <LinearLayout
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot_pass_button"
            android:layout_centerHorizontal="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:background="@color/colorFullBlack" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/label_or"
                android:textAlignment="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_weight="2"
                android:background="@color/colorFullBlack" />
        </LinearLayout>

        <Button
            android:id="@+id/f_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/spacer"
            android:layout_centerHorizontal="true"
            android:text="@string/button_fb_login"
            android:textAllCaps="false" />

    </RelativeLayout>

</FrameLayout>