<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/levels_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_level"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/levels_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/subjects_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/levels_box">
        <TextView
            android:id="@+id/subjects_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_subject"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"/>
        <Spinner
            android:id="@+id/subjects_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/time_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subjects_box"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/label_time"/>
        <EditText
            android:id="@+id/date_from_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="24/10/2018 - 15:30"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/label_to"/>
        <EditText
            android:id="@+id/date_to_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="24/10/2018 - 20:00"/>
    </LinearLayout>

</RelativeLayout>