<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/info_select_date"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/date_from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_from"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/date_from_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_default_rect"
        android:text="15/12/2018 15:00"
        android:layout_below="@id/date_from_label"
        android:textColor="@color/colorTextLabels"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/date_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to"
        android:layout_below="@id/date_from_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>
    <Button
        android:id="@+id/date_to_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_default_rect"
        android:text="15/12/2018 15:00"
        android:layout_below="@id/date_to_label"
        android:textColor="@color/colorTextLabels"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>