<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.EditAccountFragment">

    <TextView
        android:id="@+id/fragment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_edit_account"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/title_to_content_space"/>

    <LinearLayout
        android:id="@+id/img_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/fragment_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/fragment_label"
            android:src="@drawable/marysia"
            android:layout_weight="4"
            android:layout_marginEnd="16dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:layout_marginBottom="@dimen/label_to_value_space"
                android:textSize="@dimen/default_text_size"/>
            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_label"
                android:text="Sierotka"
                android:layout_marginBottom="@dimen/field_to_field_space"
                android:textStyle="bold"
                android:textSize="@dimen/default_text_size"/>
            <TextView
                android:id="@+id/sname_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sname"
                android:layout_below="@id/name_value"
                android:layout_marginBottom="@dimen/label_to_value_space"
                android:textSize="@dimen/default_text_size"/>
            <TextView
                android:id="@+id/sname_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sname_label"
                android:text="Marysia"
                android:textStyle="bold"
                android:textSize="@dimen/default_text_size"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_box"
        android:text="@string/label_email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="@dimen/field_to_field_space"
        android:layout_marginBottom="@dimen/label_to_value_space"
        android:textSize="@dimen/default_text_size"/>
    <TextView
        android:id="@+id/email_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/field_to_field_space"
        android:text="wilk@czerwonykapturek.pl"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"/>
    <TextView
        android:id="@+id/phone_no_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_value"
        android:text="@string/label_phone_no"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/label_to_edit_space"
        android:textSize="@dimen/default_text_size"/>
    <EditText
        android:id="@+id/phone_no_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_no_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/field_to_field_space"
        android:inputType="phone"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"/>
    <TextView
        android:id="@+id/about_me_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_no_edit"
        android:text="@string/label_about_me"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/label_to_edit_space"
        android:textSize="@dimen/default_text_size"/>
    <EditText
        android:id="@+id/about_me_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_me_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"
        android:inputType="text"
        android:layout_marginBottom="@dimen/field_to_field_space" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_me_edit"
        android:text="@string/label_password"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/label_to_edit_space"
        android:textSize="@dimen/default_text_size"/>
    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"
        android:inputType="textPassword"/>

</RelativeLayout>