<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/info_select_subject"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <LinearLayout
        android:id="@+id/levels_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_text"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_level"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Szkoła podstawowa"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Liceum podstawa"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Liceum rozszerzenie"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Studia"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/subjects_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/levels_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/subjects_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_subject"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/subjects_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"/>
    </LinearLayout>


</RelativeLayout>